--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_AEM_HOST=https://publish-p152536-e1586007.adobeaemcloud.com/
+NEXT_PUBLIC_AEM_HOST=https://publish-p152536-e1586007.adobeaemcloud.com
 NEXT_GRAPHQL_ENDPOINT="/content/_cq_graphql/wknd-shared/endpoint.json"
 NEXT_PUBLIC_URL=https://chg-app.vercel.app
 NEXT_PUBLIC_AEM_SITE=wknd-app
